Font-awesome 5 icons not always visible in submenu (fixes #659)

--- a/src/sass/jquery.contextMenu.scss
+++ b/src/sass/jquery.contextMenu.scss
@@ -59,7 +59,7 @@
     }
 
     &.context-menu-hover {
-      i, svg {
+      > i, > svg {
         color: $context-menu-icon-color-hover;
       }
     }
